--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -1,10 +1,10 @@
 <footer id="colophon" class="site-footer" role="contentinfo">
   <div class="site-info">
     <div class="footertext">
-      <div class="img-preload">
+      <!-- <div class="img-preload">
         <img src="https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.6/img/other/wordpress-rotating-ball-o.svg">
         <img src="https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.6/img/other/disqus-preloader.svg">
-      </div>
+      </div> -->
       <p style="color: #666666;">&copy <%= date(new Date(), 'YYYY') %></p>
     </div>
   </div>
@@ -22,7 +22,7 @@
 <script src="/js/botui.js"></script>
 <!-- 不蒜子 网页计数器 -->
 <script src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.4.2/tocbot.min.js"></script> -->
+<script src="/js/tocbot.4.4.2.min.js"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
 if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
