--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -31,6 +31,7 @@
     media="all">
   <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
   <link rel="dns-prefetch" href="https://cdn.bootcss.com">
+  <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
   <link rel="stylesheet" id="saukra_css-css" href="/css/style.css" type="text/css" media="all">
   <link rel="stylesheet" href="/css/lib.min.css" media="all">
   <!-- <link rel="stylesheet" href="/css/font.css" media="all"> -->
@@ -45,9 +46,6 @@
   <!-- 暂时不想重新写icon -->
   <!-- <script src="/js/iconfont.js"></script> -->
   <link rel="stylesheet" type="text/css" href="/css/monokai_sublime.min.css">  
-  <canvas class="fireworks" style="position: fixed; left: 0px; top: 0px; z-index: 9; pointer-events: none; width: 1440px; height: 451px;" width="2880" height="902"></canvas>
-  <script type="text/javascript" src="/js/anime2.2.0.min.js"></script>
-  <script src="/js/cursor.js"></script>
   <script src="/js/highlight.js"></script>  
   <script >hljs.initHighlightingOnLoad();</script>   
   <script src="/js/jquery-2.1.0.min.js"></script>
@@ -165,4 +163,10 @@
       display: none !important;
     }
   </style>
+
 </head>
+<!-- 写body里算了 -->
+<canvas class="fireworks" style="position: fixed; left: 0px; top: 0px; z-index: 9; pointer-events: none; width: 1440px; height: 451px;" width="2880" height="902"></canvas>
+<script type="text/javascript" src="/js/anime2.2.0.min.js"></script>
+<script src="/js/cursor.js"></script>
+  
