--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -2101,7 +2101,8 @@ a:active {
     padding: 0 10px;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(255, 255, 255, .8)
+    background-color: rgba(255, 255, 255, .8);
+    box-shadow: 0 0 20px 10px rgba(220, 220, 220, .3);
 }
 
 .post-list {
