--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -5762,9 +5762,9 @@ i.iconfont.down {
         width: 100px !important;
         height: 100px !important;
     }
-    .header-info {
+    /* .header-info {
         width: 90% !important;
-    }
+    } */
     /* .header-info:before {
         top: 98px !important;
     } */
