--- a/themes/Sakura/layout/_partial/comment.ejs
+++ b/themes/Sakura/layout/_partial/comment.ejs
@@ -1,15 +1,22 @@
-<% if (theme.valine && post.comments) { %>
-<div id="vcomments"></div>
-<script>
-  window.onload = function(){
-      var valine = new Valine();
-      valine.init({
-        el: '#vcomments',
-        appId: "<%= theme.v_appId %>",
-        appKey: "<%= theme.v_appKey %>",
-        path: window.location.pathname,
-        placeholder: "你是我一生只会遇见一次的惊喜 ..."
-      })
-  }
-</script>
-<% } %>
+<div id="content" class="site-content">
+  
+  <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
+    <p style="font-size: 13px">
+      <% if (theme.valine && post.comments) { %>
+        <div id="vcomments"></div>
+        <script>
+          window.onload = function(){
+              var valine = new Valine();
+              valine.init({
+                el: '#vcomments',
+                appId: "<%= theme.v_appId %>",
+                appKey: "<%= theme.v_appKey %>",
+                path: window.location.pathname,
+                placeholder: "你是我一生只会遇见一次的惊喜 ..."
+              })
+          }
+        </script>
+        <% } %>
+  </article>
+</div>
+
