--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -10,7 +10,7 @@
   </div>
 </footer>
 
-
+<script src="https://cdn.jsdelivr.net/gh/xiabo2/CDN@latest/fishes.js"></script>
 <script type="text/javascript" src="/js/lib.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
 <script type="text/javascript" src="/js/InsightSearch.js"></script>
