--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -167,6 +167,17 @@
 </head>
 <!-- 写body里算了 -->
 <canvas class="fireworks" style="position: fixed; left: 0px; top: 0px; z-index: 9; pointer-events: none; width: 1440px; height: 451px;" width="2880" height="902"></canvas>
+<canvas class="bg-canvas" style="position: fixed; left: 0px; top: 0px; z-index: -99999999; pointer-events: none; width: 100%; height: 100%;" width="2880" height="902"></canvas>
 <script type="text/javascript" src="/js/anime2.2.0.min.js"></script>
 <script src="/js/cursor.js"></script>
-  
+<style>
+  .bg-canvas{
+    /* background-image: url(https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201221160315.jpg); */
+    background-image: url(https://cdn.jsdelivr.net/gh/dummerchen/My_Image_Bed01@master/img/20201221160708.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    opacity: 0.7;
+
+  }
+</style>
