--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="baidu-site-verification" content="code-rwA4WmzdEy" />
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <%
   var title = page.title;
