--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -8,7 +8,7 @@
 <script src='//cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.min.js'></script>
 <script src="/js/botui.js"></script>
 <!-- 不蒜子 网页计数器 -->
-<script src="/js/busuanzi2.3.pure.mini.js"></script>
+<script async src="/js/busuanzi2.3.pure.mini.js"></script>
 <script src="/js/tocbot.4.4.2.min.js"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
