--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -1093,15 +1093,15 @@ dfn,cite,em,i {
 
 blockquote {
     margin: 0;
-    padding: 30px 60px;
+    padding: 10px 30px;
     position: relative
 }
 
 blockquote:before {
     content: "\f10d" !important;
-    font-size: 3rem;
+    font-size: 1rem;
     position: absolute;
-    top: -25px;
+    top: -5px;
     left: 12px;
     color: orange;
     font-family: FontAwesome
@@ -1109,9 +1109,9 @@ blockquote:before {
 
 blockquote:after {
     content: '\f10e' !important;
-    font-size: 3rem;
+    font-size: 1rem;
     position: absolute;
-    bottom: -25px;
+    bottom: -5px;
     right: -5px;
     color: orange;
     font-family: FontAwesome
@@ -1520,7 +1520,7 @@ a:active {
     background-position: center center;
     background-origin: border-box;
     width: 100%;
-    height: 400px
+    height: 400px;
 }
 
 .pattern-center header.pattern-header {
@@ -1664,10 +1664,6 @@ a:active {
         height: 2.375rem !important;
         bottom: -0.999rem !important;
     }
-    .filter-dot::before {
-        z-index: 1;
-        background-image: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/grid.png)
-    }
 }
 
 .pattern-center-sakura {
@@ -1740,14 +1736,14 @@ a:active {
 .single-center .single-header h1.entry-title {
     margin: 0;
     font-size: 32px;
-    width: 100%
+    width: 100%;
 }
 
 .single-center .entry-census {
     color: #fff;
     font-size: 16px;
     font-family: 'Playball';
-    padding: 18px 0 0;
+    padding: 0px 0 0;
     line-height: 39px
 
 }
@@ -2308,13 +2304,18 @@ i.iconfont.hotpost {
     word-wrap: break-word
 }
 
-.post-date,
-.post-meta,
-.post-meta a {
+.post-date,.post-meta,.post-meta a {
     color: #888;
     font-size: 16px
 }
-
+@media(max-width:768px) {
+    .post-meta{
+        display: none;
+    }
+    h3{
+        margin: 5px;
+    }
+}
 .comments-number {
     margin: 0 10px
 }
@@ -2620,10 +2621,10 @@ canvas:not(#ribbon-canvas), #web_bg {
 
 .entry-content ul {
     list-style: disc;
-    border: 1px dashed #e4e4e4;
-    padding: 15px 10px 15px 50px;
+    padding: 10px 10px 15px 10px;
     color: #616161;
     margin-left: 0;
+    margin-bottom: 5px;
     border-radius: 10px
 }
 
@@ -2636,10 +2637,6 @@ canvas:not(#ribbon-canvas), #web_bg {
     border-radius: 10px
 }
 
-.entry-content ol li,
-.entry-content ul li {
-    padding: 8px 0
-}
 
 .entry-content {
     position: relative
@@ -2717,24 +2714,30 @@ canvas:not(#ribbon-canvas), #web_bg {
 
 .entry-content a {
     color: #e67474;
-    text-decoration: underline dotted rgba(0, 0, 0, .1)
+    /* text-decoration: underline dotted rgba(0, 0, 0, .1) */
 }
 
 .entry-content a:hover {
     color: orange;
-    text-decoration: underline orange
+    /* text-decoration: underline orange */
 }
 
 h1.entry-title {
-    font-size: 24px;
-    font-weight: 300
+    font-size: 40px !important;
+    font-weight: 300;
+    color: #ffffffe0;
+    font-style: italic;
+    animation: fade-in-down 1s both;
+    -webkit-animation-delay: .6s;
+    animation-delay: .5s;
+    text-shadow: 0 3px 6px rgba(0, 0, 0, .3);
 }
 
 .entry-header h1.entry-title {
     margin: auto;
     text-align: center;
     font-weight: bold;
-    text-transform: uppercase
+    text-transform: uppercase;
 }
 
 .entry-header h1.entry-title:before {
@@ -2754,7 +2757,7 @@ h1.entry-title {
 }
 
 .entry-content p {
-    margin: 13px auto;
+    margin: 5px auto;
     padding: 0;
     font-family: -apple-system,BlinkMacSystemFont,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Segoe UI","PingFang SC","Hiragino Sans GB","Microsoft YaHei","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
@@ -5670,10 +5673,6 @@ i.iconfont.down {
     
     .post-more {
         display: none
-    }
-    
-    h1.entry-title {
-        font-size: 18px
     }
     
     .post-footer,
