--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -56,7 +56,7 @@
     /*Initial Variables*/
     var mashiro_option = new Object();
     var mashiro_global = new Object();
-    mashiro_option.NProgressON = false;
+    mashiro_option.NProgressON = true;
     /* 
      * 邮箱信息之类的东西可以填在这里，这些js变量基本都作用于sakura-app.js
      * 这样的设置仅是为了方便在基于PHP开发的主题中设置js变量，既然移植到了Node上，我想或许可以精简这一逻辑吧
