增加搜索功能

--- a/themes/Sakura/layout/_partial/header.ejs
+++ b/themes/Sakura/layout/_partial/header.ejs
@@ -10,7 +10,7 @@
       </span>
     </div>
     <div class="searchbox search-form-submit">
-      <i class="iconfont js-toggle-search iconsearch icon-search">
+      <i class="iconfont js-toggle-search iconsearch icon-search-copy">
       </i>
     </div>
     <div id="show-nav" class="showNav mobile-fit">
