--- a/themes/Sakura/layout/layout.ejs
+++ b/themes/Sakura/layout/layout.ejs
@@ -16,7 +16,7 @@
         <div class="icon"></div>
       </div>
       <div class="site-branding search-form-submit">
-        <i class="iconfont js-toggle-search iconsearch icon-search"></i>
+        <i class="iconfont js-toggle-search iconsearch icon-search-copy"></i>
       </div>
     </div>
   </section>
