--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -74,7 +74,7 @@
     mashiro_option.mathjax = "<%= theme.mathjax %>";
     mashiro_option.qq_api_url = "https://api.mashiro.top/qqinfo/";
     mashiro_option.qq_avatar_api_url = "https://api.mashiro.top/qqinfo/";
-    myurl=['https://dummerfu.tk/','http://localhost:4000/','https://dummerchen.github.io/']
+    myurl=['https://dummerfu.tk/','http://localhost:4000/','https://dummerchen.github.io/','https://dummerfu.top/']
   </script>
 
   <script type="text/javascript">
