修改鼠标样式

--- a/themes/Sakura/source/css/style.css
+++ b/themes/Sakura/source/css/style.css
@@ -6,7 +6,7 @@
 }
 
 #veditor {
-    background-image: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/comment-bg.png);
+    background-image: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/comment-bg.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
@@ -890,7 +890,8 @@ template {
 a {
     background-color: transparent;
     text-decoration: none;
-    cursor: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/ayuda.cur), auto
+    /* cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/ayuda.cur), auto */
+    cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), auto
 }
 
 a:active,
@@ -899,7 +900,7 @@ a:hover {
 }
 
 a:active {
-    cursor: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/work.cur), alias
+    cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), alias
 }
 
 abbr[title] {
@@ -1078,7 +1079,8 @@ h1,h2,h3,h4,h5,h6,.post-list-thumb {
 
 p {
     margin-bottom: 1.5em;
-    cursor: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/texto.cur), auto
+    /* cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/texto.cur), auto */
+    cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/normal.cur), auto
 }
 
 dfn,cite,em,i {
@@ -1186,7 +1188,7 @@ html {
 body {
     background: #fff;
     background-attachment: fixed;
-    cursor: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/normal.cur), auto
+    cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/normal.cur), auto
 }
 
 blockquote:before,
@@ -1446,15 +1448,15 @@ a:active {
 
 .video-play,
 .loadvideo {
-    background-image: url('https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/play@32x32.png')
+    background-image: url('https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/play@32x32.png')
 }
 
 .video-pause {
-    background-image: url('https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/pause@32x32.png')
+    background-image: url('https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/pause@32x32.png')
 }
 
 #video-add {
-    background-image: url('https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/add@32x32.png');
+    background-image: url('https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/add@32x32.png');
     bottom: 45px;
     display: none
 }
@@ -2836,11 +2838,11 @@ h1.page-title.mb- {
     z-index: 99;
     width: 70px;
     height: 900px;
-    background: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/scroll.png) no-repeat center;
+    background: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/scroll.png) no-repeat center;
     background-size: contain;
     -webkit-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
-    cursor: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/No_Disponible.cur), auto;
+    cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/nomal.cur), auto;
     opacity: 1
 }
 
@@ -3536,7 +3538,7 @@ h1.page-title.mb- {
     height: 40px;
     text-align: center;
     line-height: 45px;
-    background-image: url("https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/disqus-preloader.svg");
+    background-image: url("https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/disqus-preloader.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: auto 100%
@@ -4475,7 +4477,7 @@ a.page-numbers {
 }
 
 .comment-respond textarea {
-    background-image: url('https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/comment-bg.png');
+    background-image: url('https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/comment-bg.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
@@ -4797,12 +4799,12 @@ li.feature-2 {
 }
 
 .headertop.filter-grid::before {
-    background-image: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/grid.png)
+    background-image: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/grid.png)
 }
 
 .filter-dot::before {
     z-index: 1;
-    background-image: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/dot.gif)
+    background-image: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/dot.gif)
 }
 
 
@@ -5142,7 +5144,7 @@ i.iconfont.js-toggle-search.iconsearch {
     visibility: visible;
     opacity: .99;
     animation: elastic .5s;
-    background-image: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/iloli.gif);
+    background-image: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/://cdn.jsdelivr.net/gh/dummerchen/cdn@latest/img/other/iloli.gif);
     background-repeat: no-repeat;
     background-position: bottom right
 }
@@ -5545,7 +5547,7 @@ i.iconfont.down {
     color: orange
 }
 #pagination .loading {
-    background: url("https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/wordpress-rotating-ball-o.svg");
+    background: url("https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/wordpress-rotating-ball-o.svg");
     background-position: center;
     background-repeat: no-repeat;
     color: #555;
@@ -5756,7 +5758,8 @@ i.iconfont.down {
     } */
     .top-social_v2 li {
         margin-right: 0px !important;
-        cursor: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/ayuda.cur), auto !important;
+        /* cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/ayuda.cur), auto !important; */
+        cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/work.cur), auto !important;
     }
     #main-container {
         transition-duration: .5s;
@@ -6530,7 +6533,7 @@ i.iconfont.down {
 .oshimai {
     height: 2em;
     width: 6.11em;
-    background: url("https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/oshimai.svg");
+    background: url("https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/oshimai.svg");
     background-size: cover;
     margin: 0 auto
 }
@@ -6676,7 +6679,7 @@ i.iconfont.down {
     border: 0;
     color: #fff;
     line-height: 1;
-    cursor: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/No_Disponible.cur), auto;
+    cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/nomal.cur), auto;
     font-size: 14px;
     font-weight: 500;
     padding: 7px 15px;
@@ -6815,7 +6818,7 @@ input.botui-actions-text-input::-moz-focus-inner {
     padding: 0
 }
 button.botui-actions-buttons-button {
-    cursor: url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/No_Disponible.cur), auto;
+    cursor: url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/nomal.cur), auto;
     -webkit-appearance: button
 }
 .botui-app-container {
@@ -8048,7 +8051,7 @@ a.toc-link:hover{
 .emotion-item,
 .emoji-item,
 .tieba-container span {
-    cursor:url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/No_Disponible.cur),
+    cursor:url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/nomal.cur),
     auto
 }
 .alignright {
@@ -8497,7 +8500,8 @@ code[class*="language-"], pre[class*="language-"] {
     padding-left: 20px;
     text-shadow:none;
     border-radius:0 0 5px 5px;
-    cursor:url(https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/cursor/texto.cur),
+    /* cursor:url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/texto.cur), */
+    cursor:url(https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/cursor/normal.cur),
     auto
 }
 .highlight-wrap code[data-rel]:before {
@@ -8898,7 +8902,7 @@ img[src*="#in-center"] {
 #banner_wave_1 {
     width:auto;
     height:65px;
-    background:url("https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/wave1.png") repeat-x;
+    background:url("https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/wave1.png") repeat-x;
     position:absolute;
     bottom:0;
     width:400%;
@@ -8913,7 +8917,7 @@ img[src*="#in-center"] {
 #banner_wave_2 {
     width:auto;
     height:80px;
-    background:url("https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/wave2.png") repeat-x;
+    background:url("https://cdn.jsdelivr.net/gh/dummerchen/cdn@1.9/img/other/wave2.png") repeat-x;
     position:absolute;
     bottom:0;
     width:400%;
